# MagicInfer

./: .gitignore  CMakeLists.txt  README.md  compile_run.sh
bench/: CMakeLists.txt  bench_copy.cpp  bench_matrix.cpp  bench_net.cpp  bench_relu.cpp  bench_silu.cpp  bench_view.cpp
data/batchnorm/: bn2_0.csv  bn2_1.csv  bn2_10.csv  bn2_11.csv  bn2_12.csv  bn2_13.csv  bn2_14.csv  bn2_15.csv  bn2_16.csv  bn2_17.csv  bn2_18.csv  bn2_19.csv  bn2_2.csv  bn2_20.csv  bn2_21.csv  bn2_22.csv  bn2_23.csv  bn2_24.csv  bn2_25.csv  bn2_26.csv  bn2_27.csv  bn2_28.csv  bn2_29.csv  bn2_3.csv  bn2_30.csv  bn2_31.csv  bn2_4.csv  bn2_5.csv  bn2_6.csv  bn2_7.csv  bn2_8.csv  bn2_9.csv  bn_0.csv  bn_1.csv  bn_10.csv  bn_11.csv  bn_12.csv  bn_13.csv  bn_14.csv  bn_15.csv  (+24 more)
demo/: CMakeLists.txt  image_util.cpp  image_util.hpp  main.cpp
include/data/: load_data.hpp  tensor.hpp
include/layer/abstract/: layer.hpp  layer_factory.hpp  param_layer.hpp
include/layer/details/: adaptive_avgpooling.hpp  batchnorm2d.hpp  concat.hpp  convolution.hpp  expression.hpp  flatten.hpp  hardsigmoid.hpp  hardswish.hpp  linear.hpp  maxpooling.hpp  relu.hpp  sigmoid.hpp  silu.hpp  softmax.hpp  upsample.hpp  view.hpp
include/nets/: yolo_detect.hpp
include/parser/: parse_expression.hpp
include/runtime/: ir.h  runtime_attr.hpp  runtime_datatype.hpp  runtime_ir.hpp  runtime_op.hpp  runtime_operand.hpp  runtime_parameter.hpp  store_zip.hpp
include/utils/: platform.hpp  sse_math.hpp  status_code.hpp  tick.hpp  x86_usability.hpp
log/: Magic.ERROR  Magic.INFO  Magic.VoAI.jalymo.log.ERROR.20230119-133141.3466  Magic.VoAI.jalymo.log.INFO.20230119-133141.3466  Magic.WARNING
src/backend/cuda/: CMakeLists.txt
src/backend/cuda/src/: main.cpp
src/backend/cuda/src/cuda/: gemm.cu  im2col.cu  preprocess.cu
src/data/: load_data.cpp  tensor.cpp
src/layer/abstract/: layer.cpp  layer_factory.cpp  param_layer.cpp
src/layer/details/: adaptive_avgpooling.cpp  batchnorm2d.cpp  concat.cpp  convolution.cpp  expression.cpp  flatten.cpp  hardsigmoid.cpp  hardswish.cpp  linear.cpp  maxpooling.cpp  relu.cpp  sigmoid.cpp  silu.cpp  softmax.cpp  upsample.cpp  view.cpp
src/nets/: yolo_detect.cpp
src/parser/: parse_expression.cpp
src/runtime/: ir.cpp  runtime_ir.cpp  store_zip.cpp
test/: CMakeLists.txt  test_adaptive_avgpooling.cpp  test_batchnorm2d.cpp  test_concat.cpp  test_expression.cpp  test_flatten.cpp  test_hardswish.cpp  test_linear.cpp  test_load_data.cpp  test_main.cpp  test_maxpooling.cpp  test_net.cpp  test_relu.cpp  test_reshape.cpp  test_sigmoid.cpp  test_silu.cpp  test_softmax.cpp  test_tensor.cpp  test_upsample.cpp  test_view.cpp  test_yolo.cpp
weights/batchnorm/: bn2.pnnx.param
weights/yolo/: yolov5n.pnnx.param  yolov5n_batch8.pnnx.param  yolov5n_small.pnnx.onnx
weights/yolo/demo/: yolov5n.pnnx.param  yolov5s_32.pnnx.param  yolov5s_batch4.pnnx.param  yolov5s_batch8.pnnx.param
